--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "remark-lint": "^6.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
